# solana_contract_trainning

elementals-staking-contract/: .gitignore  Anchor.toml  README.md  package.json
elementals-staking-contract/cli/: command.ts  scripts.ts
elementals-staking-contract/lib/: constant.ts  scripts.ts  types.ts  util.ts
elementals-staking-contract/programs/nft-staking/: Cargo.toml
elementals-staking-contract/programs/nft-staking/src/: constant.rs  lib.rs  state.rs
elementals-staking-contract/programs/nft-staking/src/instructions/: initial_users.rs  initialize.rs  mod.rs
elementals-staking-contract/tests/: dexifi.ts
first/: Anchor.toml
first/programs/first/: Cargo.toml
first/programs/first/src/: lib.rs
first/tests/: first.ts
staking-first/: Anchor.toml
staking-first/programs/staking-first/: Cargo.toml
staking-first/programs/staking-first/src/: lib.rs
staking-first/tests/: staking-first.ts
